# Sample-project

./: .gitignore  .project  CMakeLists.txt  Dockerfile  README.md  REAMDE.md  _clang-format  adas.txt  apply_clang.py  compile.bat  compile_code_coverage.bat  compile_debug.bat  compile_debug_and_test.bat  requirements.txt  run_types_check.bat  run_utests.bat
CMakeModules/: CodeCoverage.cmake
Learning/: somefile.txt
Learning/Python/: canvas.py  webpage.py
Learning/Python/templates/: index.html
Testing folder/: Hola!.txt
include/: CMakeLists.txt  Sorter.h  main.h
src/: CMakeLists.txt  Sorter.cpp  main.c  main.cpp
src/libs/: CMakeLists.txt
src/libs/Sorter/: CMakeLists.txt  Sorter.cpp
src/libs/Sorter/include/: Sorter.h
test/: CMakeLists.txt
test/cmocka/: CMakeLists.txt
test/cmocka/include/: cmocka.h  cmocka_pbc.h  cmocka_private.h
test/cmocka/src/: cmocka.c
test/unit_tests/: CMakeLists.txt
test/unit_tests/Sorter_test/: CMakeLists.txt  Test.cpp
tools/: Jenkinsfile  check_clang.py  check_code_coverage.py  check_commit_message.py  check_warnings.py  data_format.py
