add_subdirectory(edr_code_conventions)
add_subdirectory(edr_utilities)
add_subdirectory(edr_integration_test)
# add_subdirectory(edr_processor)
add_subdirectory(edr_activity_handler)
add_subdirectory(edr_activity_handler_gen)
add_subdirectory(edr_diagnostic)
add_subdirectory(edr_memory_buffer)
add_subdirectory(edr_dssad_buffer)
add_subdirectory(edr_dssad_task)
add_subdirectory(edr_counters)
add_subdirectory(edr_config)
add_subdirectory(edr_queue)
add_subdirectory(edr_queue_stress_test)
add_subdirectory(edr_nvm)
# add_subdirectory(edr_controller_handler)
add_subdirectory(edr_rte_ports_handler)
add_subdirectory(edr_rte_ports_handler_gen)
add_subdirectory(edr_logger)
add_subdirectory(edr_logger_format)
add_subdirectory(edr_logger_buffer)
add_subdirectory(edr_logger_task)
add_subdirectory(sil)
add_subdirectory(edr_signals_handler)
add_subdirectory(testing_cmocka)
add_subdirectory(pc_tool)
add_subdirectory(edr_file_utilities)
add_subdirectory(edr_time_utilities)
add_subdirectory(edr_trigger_handler)
add_subdirectory(edr_trigger_handler_gen)
add_subdirectory(edr_activations)
add_subdirectory(edr_crc_utilities)
add_subdirectory(edr_dataset)
add_subdirectory(edr_dataset_gen)
add_subdirectory(edr_generated)
add_subdirectory(edr_errors_handler)
add_subdirectory(edr_encryption)
